# gesture-controlled-robotic-hand

./: .gitignore  README.md
ESP_servo_control/main/: CMakeLists.txt  main.c
ros2_ws/src/robotic_hand_ros/: CMakeLists.txt  package.xml
ros2_ws/src/robotic_hand_ros/hand_nodes/: __init__.py  kpt_publisher.py  kpt_publisher_mediapipe.py  kpt_subscriber.py  uart_communication_node.py
scripts/: convert_coco2yolo26.py  download_dataset.py  fotos.py  gesture_jetson.py  keypoints.md  merge_datasets.py  model_training_graphs.py  prueba_YOLO.py  split.py  test_mano.py  test_mp.py
